[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["sudo-Boris <boris.meinardus00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorboard = "^2.10.1"
wandb = "^0.13.4"
black = "^22.10.0"
stable-baselines3 = "^1.6.2"
moviepy = "^1.0.3"
pyglet = "^1.5.27"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
